# referral-api

./: Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linting.yml
infra/: .env.example  docker-compose.yml
infra/nginx/: default.conf
src/api/v1/: urls.py
src/api/v1/users/: serializers.py  urls.py  views.py
src/config/: settings.py  urls.py
src/config/components/: api.py  application_definition.py  auth.py  database.py  http.py  internationalization.py
src/users/: admin.py  managers.py  models.py
src/users/migrations/: 0001_initial.py  0002_authcode.py
